- 26 de mayo de 2026 21:47 - [1.0.0]
    - Primer versión de autoresponder para implementar en whatsapp de calares.