@@ -1,2 +1,8 @@
 - 26 de mayo de 2026 21:47 - [1.0.0]
     - Primer versión de autoresponder para implementar en whatsapp de calares.
+- 28 de mayo de 2026 17:15 - [1.0.1]
+    - Modificación:
+        - Cambio de nombre "python_backend/requierements.txt" a "python_backend/requirements.txt"
+- 28 de mayo de 2026 18:18 - [1.0.2]
+    - Modificación:
+        - Cambio de formato de "menu.py" a "menu.json" para una lectura más fácil.
